1999-11-01  James Henstridge  <james@daa.com.au>

	* shapes/Circuit/[hv]led_de.{shape,xpm}: new circuit shapes from
	Andreas Scherf.

1999-10-31  Alexander Larsson  <alla@lysator.liu.se>

        * dia.spec:
	* configure.in:
	Update version to 0.81.
	
	* NEWS:
	Update with news for 0.81.
	
	* shapes/Circuit/*:
	* shapes/Circuit_eu/*:
	Moved european circuit objects to Circuit sheet.

1999-10-31  Alexander Larsson  <alla@lysator.liu.se>
	
        * lib/diagramdata.[ch]:
	Added layer_set_object_list() function.

	* app/undo.[ch]:
	Added support for undo of reordered objects.
	Fix the undo of delete to keep the right order on undo.
	
	* app/diagram.c:
	changed loop to object_add_updates_list() calls.
	Added undo support to bring to front/back.

	* app/disp_callbacks.c:
	* app/paginate_psprint.c:
	Remove warnings.

1999-10-30  Alexander Larsson  <alla@lysator.liu.se>

	This plugs some leaks. Thanks to
	Bruce Mitchener <bruce@cybersight.com> for running
	Dia through purify for me.
	
        * app/app_procs.c:
	Free displays and diagrams on exit.

	* app/modify_tool.c:
	Free gc when freeing tool.

	* lib/diagramdata.c:
	Free layer name.
	
	* app/display.c:
	Free update and display lists when destroying display.
	
	* lib/diagramdata.c:
	Don't leak layer name.

	* objects/custom/load_sheet.c: 
	* objects/custom/shape_info.c:
	Free loaded xml documents.

1999-10-28  Alexander Larsson  <alla@lysator.liu.se>

	* app/commands.c:
	* app/object_ops.[ch]:
	Add undo handling to alignment ops.
	Based partially on patch by Dan Cohn <dan@internap.com>.

	* objects/standard/image.c (image_move_handle):
	Don't divide by zero for small images.
	Patch by Dan Cohn <dan@internap.com>.

	* objects/UML/class.c (umlclass_destroy): 
	* objects/custom/custom_object.c (custom_destroy):
	Don't free connectionpoints before calling element_destroy
	which unconnects them.

1999-10-26  Alexander Larsson  <alla@lysator.liu.se>

	* objects/custom/custom_object.c: 